traversal.snake.Snake.scala.error
Erreur de compilation :
Snake:14: error: not found: value droie
        droie()
        ^